<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_moment"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete_moment"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/take_picture"
        android:icon="@drawable/ic_menu_photo"
        android:title="@string/take_picture"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/share_moment"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/share_with_api"
        android:icon="@drawable/ic_menu_share_with_api"
        android:title="@string/share_with_api"
        app:showAsAction="ifRoom|withText" />
</menu>