<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/moment_title_label" />

    <TextView
        android:id="@+id/moment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Moment 1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/posted_name" />

    <TextView
        android:id="@+id/posted_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/posted_hint" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/moment_description_label" />

    <TextView
        android:id="@+id/moment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="This moment" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/moments_details_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/moment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            tools:text="Wed November 20 2024" />

        <Button
            android:id="@+id/moment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="11:56 EST"
            android:enabled="false"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/moments_pictures_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/picture_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
